MAJOR FEAT: server, form, SMTP systems all set up and working, ALL TESTS COMPLETE | fix: improved form styles for readability (still rough styles) | test feat: add submitter's IP address to sent email from form using req.ip with app.set trust proxy already being true

--- a/connect/connect.css
+++ b/connect/connect.css
@@ -289,7 +289,7 @@ main {
 } 
 
 /*honeypot*/
-/*.oh-no-hun{
+.oh-no-hun{
   opacity: 0;
   position: absolute;
   top: 0;
@@ -297,12 +297,20 @@ main {
   height: 0;
   width: 0;
   z-index: -1;
-}*/
+}
 
 /*sections*/
 section {width: 100%; height:fit-content; z-index: 1;}
 
-.filler{height: 200px}
+.heading{
+display: flex;
+align-items: center;
+justify-content: center;
+width: 100%;
+height: 4rem;
+padding-top: 2.5rem;
+}
+.heading h1{color: white; font-size: 2rem;}
 
 /*footer*/
 footer{z-index: 1; display: flex; justify-content: center; align-items: center; width: 100%; max-width: 100vw;}
